// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scanner renders a DisabledScanner correctly 1`] = `
<Component
  style={
    Object {
      "flex": 1,
      "width": 750,
    }
  }
>
  <DisabledScanner />
</Component>
`;

exports[`Scanner renders a DisabledScanner with a scanError correctly 1`] = `
<Component
  style={
    Object {
      "flex": 1,
      "width": 750,
    }
  }
>
  <DisabledScanner />
</Component>
`;

exports[`Scanner renders a Scanner correctly 1`] = `
<Component
  captureAudio={false}
  onBarCodeRead={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "flex-end",
    }
  }
/>
`;

exports[`Scanner renders correctly when enabled 1`] = `
<div
  captureAudio={false}
  onBarCodeRead={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "flex-end",
    }
  }
/>
`;

exports[`Scanner renders error message if not authorized 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "flex": 1,
      "width": 750,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 7,
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      />
    </View>
    <View
      style={
        Object {
          "flex": 2,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "white",
            "margin": 20,
            "textAlign": "center",
          }
        }
      >
        Camera Disabled
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "white",
            "margin": 20,
            "textAlign": "center",
          }
        }
      >
        To scan QR codes, go to your phone's settings to allow camera access
      </Text>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "opacity": 1,
            "padding": 10,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#fff",
              "fontSize": 18,
            }
          }
        >
          Back
        </Text>
      </View>
    </View>
  </View>
</View>
`;
